objects/FM__c.object
<CustomObject>
    <fields>
        <fullName>FM_Text_4__c</fullName>
        <label>FM Text 4</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_text_2__c</fullName>
        <label>FM text 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_text_3__c</fullName>
        <label>FM text 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_text__c</fullName>
        <label>FM text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>FM</label>
    <nameField>
        <label>FM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>